fix(Info): number vertical align center (#6952)

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -419,7 +419,6 @@
 @info-background-color: @red;
 @info-dot-color: @red;
 @info-dot-size: 8px;
-@info-font-family: @price-integer-font-family;
 
 // Image
 @image-placeholder-text-color: @gray-6;
